# CPA-Ai-AGENT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SYSTEM_DESIGN.html  main.py  pyproject.toml  render.yaml  start_backend.py  streamlit_app.py
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
agents/: __init__.py  analysis.py  benchmarking.py  extraction.py  feedback.py  ingestion.py  orchestrator.py  storage.py
api/: server.py
frontend/: dashboard.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  dashboard.ts  main.ts
models/: __init__.py  database.py  pydantic_models.py
stitch_export/stitch_cpa_ai_agent_audit_platform/cpa_ai_agent_dashboard/: code.html
stitch_export/stitch_cpa_ai_agent_audit_platform/cpa_ai_agent_landing_page/: code.html
stitch_export/stitch_cpa_ai_agent_audit_platform/indigo_ledger/: DESIGN.md
tests/: conftest.py  test_analysis.py  test_benchmarking.py  test_cache.py  test_feedback.py  test_models.py  test_retry.py  test_storage.py  test_timer.py
utils/: __init__.py  cache.py  db_utils.py  file_utils.py  freight_rate_service.py  generate_dummy_pdf.py  retry.py  settings.py  timer.py
